# timetables-parser-edupage

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
timetables/parser/edupage/: __init__.py  cli.py  parser.py
timetables/parser/edupage/api/: __init__.py  api.py  api_v1.py  api_v2.py  const.py  utils.py
timetables/parser/edupage/api/model/: __init__.py  account.py  edupage.py  exception.py  portal.py  session.py
